<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">httpjson</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="save">save to intenal storage</string>
    <string name="read">load from intenal storage</string>
    <string name="GET">GET</string>
    <string name="POST">POST</string>
    <string name="PUT">PUT</string>
    <string name="DELETE">DELETE</string>
    
    <string name="aerc_authentication_failed">Authentication failed</string>
    <string name="aerc_failed">failed</string>
    <string name="aerc_no_auth_token">Couldn\'t get auth token</string>
    <string name="aerc_no_cookie">App engine provided no cookie</string>
    <string name="aerc_no_network">No network connection</string>

</resources>